making some UI improvements, adding padding to input fields and background-overlay on home.php and similar backgrounds

--- a/marksgrat.css
+++ b/marksgrat.css
@@ -18,9 +18,9 @@ input
     width:30vw; 
     margin:auto;
     text-align:center; 
-    border:4px outset;
     animation-name:animate;
     animation-duration: 1s;
+    padding:16px;
 }
 @keyframes animate
 {
