--- a/result.css
+++ b/result.css
@@ -39,7 +39,7 @@ body{
 {
     display:block;
     text-align:center;
-    color:#000bff; 
+    color:#0007a6; 
     font-size:25px;
 }
 @keyframes animat
