--- a/style.css
+++ b/style.css
@@ -6,31 +6,26 @@ body{
     z-index:-1;
 }
 #form_cont{
-    background-color: rgb(255, 255, 255,0.8);
-    position :relative; 
-    top:29vh;
-    width:23vw;
-    border:8px inset ;
-    border-radius: 20px;
     /* text-align:center; */
     animation-name:reload;
     animation-duration:1s;
     animation-timing-function:ease-in-out;
-    opacity: 100%;
-    margin-left:auto;
-    margin-right:auto;
 }
 #form_cont2{
+    text-align:center;
+    opacity: 100%;
+}
+.form_cont_comm{
     background-color: rgb(255, 255, 255,0.8);
     position :relative; 
     top:29vh;
     width:23vw;
-    border:8px inset ;
     border-radius: 20px;
-    text-align:center;
     opacity: 100%;
     margin-left:auto;
     margin-right:auto;
+    padding-top:16px;
+    padding-bottom:16px;
 }
 #sub
 {
@@ -47,6 +42,7 @@ input{
     height:3vh;
     margin-left :auto;
     margin-right :auto;
+    padding-left:8px;
 
 }
 #Show_pass{
