--- a/sub_marks.css
+++ b/sub_marks.css
@@ -11,6 +11,8 @@ input
     margin-top:30px;
     border-radius:20px;
     width:10vw;
+    padding-left:8px;
+    height:
 }
 #formcont
 {
@@ -18,7 +20,7 @@ input
     width:30vw; 
     margin:auto;
     text-align:center; 
-    border:4px outset;
+    padding:16px;
     animation-name:animate;
     animation-duration: 1s;
 }
